# ImmortalThreads

./: .dockerignore  .editorconfig  .gitignore  ARTIFACT_EVALUATION.md  Dockerfile  LICENSE.txt  README.md  index.md  requirements.txt
apps/sem_example/: CMakeLists.txt  main.c  main.immortal.c  th1.c  th1.immortal.c  th2.c  th2.immortal.c
apps/sensing_example/: CMakeLists.txt  main.c  main.immortal.c  th_temp.c  th_temp.immortal.c  timer_event.c
compiler/: CMakeLists.txt  README.md
compiler/src/: CMakeLists.txt  context.cpp  context.hpp  main.cpp  pass.cpp  pass.hpp
compiler/src/matchers/: matchers.cpp  matchers.hpp
compiler/src/passes/: control_stmt.cpp  control_stmt.hpp  expression_decomposition.cpp  expression_decomposition.hpp  force_braces.cpp  force_braces.hpp  function_copy.cpp  function_copy.hpp  immortal_function.cpp  immortal_function.hpp  initializer_decomposition.cpp  initializer_decomposition.hpp  macro_expansion.cpp  macro_expansion.hpp  runtime_api.cpp  runtime_api.hpp  self_write_operators.cpp  self_write_operators.hpp  shim_api_replacement.cpp  shim_api_replacement.hpp  switch_transformation.cpp  switch_transformation.hpp  ternary_decomposition.cpp  ternary_decomposition.hpp
compiler/src/passes/mem_write/: basic_block.cpp  basic_block.hpp  naive.cpp  naive.hpp
compiler/src/utils/: ast.cpp  ast.hpp  error.cpp  error.hpp  expr.cpp  expr.hpp  immortal.cpp  immortal.hpp  location.cpp  location.hpp
compiler/test/: CMakeLists.txt  README.md  test.py
compiler/test/control_stmt/do_while/0/: input.c  input.immortal.c
compiler/test/control_stmt/for/0/: input.c  input.immortal.c
compiler/test/control_stmt/for/1/: input.c  input.immortal.c
compiler/test/control_stmt/for/2/: input.c  input.immortal.c
compiler/test/control_stmt/for/3/: input.c  input.immortal.c
compiler/test/control_stmt/for/4/: input.c  input.immortal.c
compiler/test/control_stmt/if/0/: input.c  input.immortal.c
compiler/test/control_stmt/if/1/: input.c  input.immortal.c
compiler/test/control_stmt/switch/0/: input.c  input.immortal.c
compiler/test/delimiter/0/: input.c  input.immortal.c
compiler/test/e2e/: extra_args
compiler/test/e2e/ar/: main.c  main.immortal.c  main.optmz-exec-time.immortal.c
compiler/test/e2e/bc/: main.c  main.immortal.c  main.optmz-exec-time.immortal.c
compiler/test/e2e/cuckoo/: main.c  main.immortal.c  main.optmz-exec-time.immortal.c
compiler/test/e2e/dnn/: CMakeLists.txt  dnn.immortal.c  dnn.optmz-exec-time.immortal.c  dnn_calc.c  dnn_calc.immortal.c  dnn_calc.optmz-exec-time.immortal.c  extra_args  fixed.immortal.c  main.c  main.immortal.c  main.optmz-exec-time.immortal.c  mat.c  mat.optmz-exec-time.immortal.c
compiler/test/expression/0/: input.c  input.immortal.c
compiler/test/expression/1/: input.c  input.immortal.c
compiler/test/expression/2/: input.c  input.immortal.c
compiler/test/expression/3/: input.c  input.immortal.c
compiler/test/expression/4/: todo
compiler/test/function/0/: input.c  input.immortal.c
compiler/test/function/1/: input.c  input.immortal.c
compiler/test/function/10/: input.c  input.immortal.c
compiler/test/function/11/: input.c  input.immortal.c
compiler/test/function/12/: input.c  input.immortal.c
compiler/test/function/13/: input.c  input.immortal.c
compiler/test/function/2/: input.c  input.immortal.c
compiler/test/function/3/: input.c  input.immortal.c
compiler/test/function/4/: input.c  input.immortal.c
compiler/test/function/5/: input.c  input.immortal.c
compiler/test/function/6/: input.c  input.immortal.c
compiler/test/function/7/: input.c  input.immortal.c
compiler/test/function/8/: input.c  input.immortal.c
compiler/test/function/9/: input.c  input.immortal.c
compiler/test/header_file/0/: input.c  input.h  input.immortal.c
compiler/test/header_file/1/: input.c  input.h  input.immortal.c
compiler/test/header_file/2/: extra_args  input_0.c  input_1.c  input_1.immortal.c  main.c  main.immortal.c
compiler/test/header_file/3/: input_0.immortal.c  input_1.h  main.c  main.h  main.immortal.c
compiler/test/header_file/4/: input.c  input.immortal.c
compiler/test/macros/0/: input.c  input.immortal.c
compiler/test/nv_write/0/: input.c  input.immortal.c
compiler/test/nv_write/1/: input.c  input.immortal.c
compiler/test/shim_api/0/: input.c  input.immortal.c
compiler/test/shim_api/1/: input.c  input.immortal.c
compiler/test/shim_api/2/: input.c  input.immortal.c
compiler/test/shim_api/3/: input.c  input.immortal.c
compiler/test/var_decl_def/0/: input.c  input.immortal.c
compiler/test/var_decl_def/1/: input.c  input.immortal.c
compiler/test/var_decl_def/2/: input.c  input.immortal.c
compiler/test/var_decl_def/3/: input.c  input.immortal.c
compiler/test/var_decl_def/4/: input.c  input.immortal.c
compiler/test/var_decl_def/5/: input.c  input.immortal.c
runtime/: CMakeLists.txt  README.md
runtime/cmake/: ImmortalCompiler.cmake
runtime/cmake/toolchains/: msp430fr5994.cmake
runtime/src/: CMakeLists.txt  annotations.h  common.h  event.h  immortality.h  immortality_conf.h  mem.h  mutex.h  sched.c  sched.h  sem.h  thread.c  thread.h  time.h
runtime/src/port/: README.md  portable.h
runtime/src/port/linux/: CMakeLists.txt  port.c  port_special.c  port_special.h  portmacro.h
runtime/src/port/msp430/: CMakeLists.txt  linker.ld  port.c  portmacro.h
runtime/test/: CMakeLists.txt
runtime/test/benchmarks/: CMakeLists.txt
runtime/test/benchmarks/ar/: CMakeLists.txt  main.c  main.linux.immortal.c  main.msp430.immortal.c
runtime/test/benchmarks/bc/: CMakeLists.txt  main.c  main.linux.immortal.c  main.msp430.immortal.c
runtime/test/benchmarks/cuckoo/: CMakeLists.txt  main.c  main.linux.immortal.c  main.msp430.immortal.c
runtime/test/benchmarks/dnn/: CMakeLists.txt  dnn.c  dnn.linux.immortal.c  dnn.msp430.immortal.c  dnn_calc.c  dnn_calc.linux.immortal.c  dnn_calc.msp430.immortal.c  fixed.c  fixed.msp430.immortal.c  main.c  main.linux.immortal.c  main.msp430.immortal.c  mat.c  mat.msp430.immortal.c
runtime/test/linux/: CMakeLists.txt
(+56 files in other folders)
